--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teaching Friends GitHub</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1 class="primary_heading">Teaching Friends</h1>
+<script src="script.js"></script>
 </body>
 </html>
